--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -26,6 +26,11 @@ jobs:
         uses: josStorer/get-current-time@v2
         with:
           format: YYYY-MM-DD
+      - name: Add a tag
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.current-time.outputs.formattedTime }}
       - name: Release resume
         uses: softprops/action-gh-release@v1
         with:
